# rust_web_server

./: .gitignore  Cargo.toml  README.md
config/: default.toml
debian/DEBIAN/: control
debian/usr/etc/systemd/system/: rust_web_server.service
scripts/: deploy.sh  package.sh
src/: config.rs  main.rs  router.rs  server.rs  tls.rs
src/handlers/: mod.rs  static.rs
