[package]
name = "rust_web_server"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
rustls = "0.23.20"
tokio-rustls = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = "0.3"